styles.css
@import url('https://fonts.googleapis.com/css2?family=Saira+Extra+Condensed:wght@300&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Asap:wght@600&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Nova+Square&display=swap');


body{
    background-color: rgb(255, 255, 255);
}
header{
    width: 100%;
    background-color: #ffffff;
    position: relative;    
}

header:hover {
    box-shadow: 1px 1px 10px 1px rgb(212, 212, 212);
}

.navbar{
    max-width: 1300px;
    padding: 0px 30px;
    height: 100px;
    margin: auto;
    display: flex;
    align-items: center;
    justify-content: space-between;
    
}
.logo{
    font-family: 'Asap', sans-serif;
    font-size: 2em;
    font-weight: bolder;
    text-decoration: none;
    letter-spacing: .2rem;
    cursor: pointer;
    color: #4b4b4b;
}

.navbar .searchBar {
    width: 300px;
    display: flex;
    margin:auto;
    background: #ffffff;
    justify-content: space-between;
    border-radius: 40px;
}
.navbar .searchBar:hover{
    box-shadow: 1px 1px 10px 1px rgb(212, 212, 212);
}
.navbar .searchBar input{
    padding-left:30px ;
    background-color: transparent;
    border: 0;
    outline: 0;
    font-size: 20px;
    font-weight: 500;
    color: rgb(0, 0, 0);
} 
.navbar .searchBar img{
    padding-left: 35px;
    padding-right: 35px;
    border-radius: 50px;
    border: 0;
    outline: 0;
    cursor: pointer;
    background-color:orangered ;
    }
.navbar .searchBar img:hover{
    transform: scale(1.1);
    background-color: blue;
    }

